--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -444,16 +444,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.uttlesford.gov.uk" class="govuk-link">Uttlesford District Council</a></li>
-      <li><a href="http://www.stevenage.gov.uk" class="govuk-link">Stevenage Borough Council</a></li>
-      <li><a href="http://www.mendip.gov.uk" class="govuk-link">Mendip District Council</a></li>
-      <li><a href="http://www.shetland.gov.uk" class="govuk-link">Shetland Islands Council</a></li>
-      <li><a href="http://www.wyrebc.gov.uk/" class="govuk-link">Wyre Borough Council</a></li>
-      <li><a href="http://www.hertsdirect.org/" class="govuk-link">Hertfordshire County Council</a></li>
-      <li><a href="https://www.nhs.uk/" class="govuk-link">NHS</a></li>
-      <li><a href="https://getintoteaching.education.gov.uk/" class="govuk-link">Get Into Teaching</a></li>
-      <li><a href="http://www.reading.gov.uk/" class="govuk-link">Reading Borough Council</a></li>
+      <li><a href="http://www.bromley.gov.uk" class="govuk-link">London Borough of Bromley Council</a></li>
       <li><a href="http://www.inverclyde.gov.uk" class="govuk-link">Inverclyde Council</a></li>
+      <li><a href="http://www.dorsetforyou.com/county" class="govuk-link">Dorset County Council</a></li>
+      <li><a href="http://www.hants.gov.uk" class="govuk-link">Hampshire County Council</a></li>
+      <li><a href="http://findyourmp.parliament.uk/" class="govuk-link">Find your MP - UK Parliament</a></li>
+      <li><a href="http://www.flintshire.gov.uk" class="govuk-link">Flintshire County Council</a></li>
+      <li><a href="http://www.ballymena.gov.uk/" class="govuk-link">Ballymena Borough Council</a></li>
+      <li><a href="https://www.lewes-eastbourne.gov.uk" class="govuk-link">Lewes District Council</a></li>
+      <li><a href="http://www.caerphilly.gov.uk" class="govuk-link">Caerphilly County Borough Council</a></li>
+      <li><a href="http://www.downdc.gov.uk" class="govuk-link">Down District Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
