--- a/document-types/statutory_instrument.html
+++ b/document-types/statutory_instrument.html
@@ -367,10 +367,10 @@
 <li><a href="https://www.gov.uk/eu-withdrawal-act-2018-statutory-instruments/the-aviation-safety-amendment-no-2-regulations-2021">The Aviation Safety (Amendment) (No. 2) Regulations 2021</a></li>
 <li><a href="https://www.gov.uk/eu-withdrawal-act-2018-statutory-instruments/the-road-tunnel-safety-amendment-regulations-2021">The Road Tunnel Safety (Amendment) Regulations 2021</a></li>
 <li><a href="https://www.gov.uk/eu-withdrawal-act-2018-statutory-instruments/the-fluorinatedgreenhouse-gases-amendment-eu-exit-regulations-2021">The Fluorinated Greenhouse Gases (Amendment) (EU Exit) Regulations 2021</a></li>
+<li><a href="https://www.gov.uk/eu-withdrawal-act-2018-statutory-instruments/the-food-and-drink-miscellaneous-amendments-relating-to-food-and-wine-composition-information-and-labelling-regulations-2021">The Food and Drink (Miscellaneous Amendments Relating To Food and Wine Composition, Information and Labelling) Regulations 2021</a></li>
 <li><a href="https://www.gov.uk/eu-withdrawal-act-2018-statutory-instruments/the-human-medicines-amendment-etc-eu-exit-no-2-and-the-medical-devices-amendment-etc-eu-exit-no-2-regulations-2019">The Human Medicines (Amendment etc.) (EU Exit) (No. 2) and the Medical Devices (Amendment etc.) (EU Exit) (No. 2) Regulations 2019</a></li>
 <li><a href="https://www.gov.uk/eu-withdrawal-act-2018-statutory-instruments/the-data-protection-privacy-and-electronic-communications-amendments-etc-eu-exit-no-2-regulation-2019">The Data Protection, Privacy and Electronic Communications (Amendments etc) (EU Exit) (No. 2) Regulations 2019</a></li>
 <li><a href="https://www.gov.uk/eu-withdrawal-act-2018-statutory-instruments/the-capital-requirements-regulation-amendment-eu-exit-regulations-2021">The Capital Requirements Regulation (Amendment) (EU Exit) Regulations 2021</a></li>
-<li><a href="https://www.gov.uk/eu-withdrawal-act-2018-statutory-instruments/the-official-controls-plant-health-seeds-and-seed-potatoes-amendment-etc-dot-regulations-2021">The Official Controls, Plant Health, Seeds, and Seed Potatoes (Amendment etc.) Regulations 2021</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=statutory_instrument&amp;count=10">Source query from Search API</a></p>
 
