--- a/manual/configure-github-repo.html
+++ b/manual/configure-github-repo.html
@@ -187,7 +187,7 @@
 
    <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/eac5cd9886a081f1b74b10a04f61cb32023a50c9">10 Mar 2021</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/a0613e63791b221b342e3c087c18688253ad9eb3">12 May 2021</a>
 </div>
 
  <h1 id='header'>Configure a GitHub repo</h1> <p>Repositories in GOV.UK must:</p>
@@ -202,7 +202,7 @@
 <p>Almost all repos should:</p>
 
 <ul>
-<li>Have <a href="https://help.github.com/articles/about-protected-branches">branch protection</a> on master</li>
+<li>Have <a href="https://help.github.com/articles/about-protected-branches">branch protection</a> on <code>main</code> (<code>master</code> if the repo hasn&rsquo;t been updated yet)</li>
 <li>Have <a href="/manual/test-and-build-a-project-on-jenkins-ci.html">Jenkins CI</a> configured, if the repo uses Jenkins</li>
 <li>Have <a href="/manual/github-trello-poster.html">GitHub Trello Poster</a> enabled</li>
 </ul>
@@ -213,7 +213,7 @@
 <li>Give the <a href="https://github.com/orgs/alphagov/teams/gov-uk-ci-bots">GOV.UK CI Bots</a> and <a href="https://github.com/orgs/alphagov/teams/gov-uk-production">GOV.UK Production</a> teams <code>Admin</code> access</li>
 <li>Give the <a href="https://github.com/orgs/alphagov/teams/gov-uk">GOV.UK</a> <code>Write</code> access</li>
 <li>Tag it with the <a href="https://github.com/search?q=topic:govuk"><code>govuk</code></a> topic</li>
-<li><a href="https://deploy.production.govuk.digital/job/configure-github-repos">Kick off a build of the Jenkins job</a> to automate the rest</li>
+<li><a href="https://deploy.blue.production.govuk.digital/job/configure-github-repos">Kick off a build of the Jenkins job</a> to automate the rest</li>
 </ul>
 <p>If your repo will be continuously deployed, restrict merge access to users with production access with <a href="https://github.com/alphagov/govuk-saas-config/blob/master/github/repo_overrides.yml">the <code>repo_overrides.yml</code> file</a>.</p>
 
