--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.northwarks.gov.uk">North Warwickshire Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.cheshireeast.gov.uk">Cheshire East Council</a></li>
+<li><a href="https://www.gov.ukhttp//findyourmp.parliament.uk/">Find your MP - UK Parliament</a></li>
+<li><a href="https://www.gov.ukhttps//nationalcareersservice.direct.gov.uk/advice/courses/">Courses and learning - National Careers Service</a></li>
+<li><a href="https://www.gov.ukhttps//www.nhs.uk/conditions/stress-anxiety-depression/benefits-of-talking-therapy/">Talking therapy - NHS</a></li>
 <li><a href="https://www.gov.ukhttp//www.southsomerset.gov.uk">South Somerset District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.parliament.uk/business/publications/hansard/">Hansard - UK Parliament</a></li>
-<li><a href="https://www.gov.ukhttp//www.gravesham.gov.uk">Gravesham Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.selby.gov.uk">Selby District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.richmondshire.gov.uk">Richmondshire District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.beanenergyshopper.com/">Power to Switch</a></li>
-<li><a href="https://www.gov.ukhttp//www.medway.gov.uk">Medway Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.barking-dagenham.gov.uk">London Borough of Barking and Dagenham Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.lewes-eastbourne.gov.uk">Eastbourne Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.hambleton.gov.uk/">Hambleton District Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.nidirect.gov.uk/campaigns/coronavirus-covid-19">Coronavirus (COVID-19) in Northern Ireland - nidirect</a></li>
+<li><a href="https://www.gov.ukhttp//www.waverley.gov.uk/">Waverley Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.copelandbc.gov.uk/">Copeland Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.south-ayrshire.gov.uk">South Ayrshire Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
